...
                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pwj-fa-qoi">
                                <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                                <textAttributes key="titleTextAttributes">
                                    <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                </textAttributes>
                                <items>
                                    <navigationItem title="About us" id="nHV-n4-rZy">
                                        <barButtonItem key="leftBarButtonItem" title="Exit" id="7Us-0Z-54J">
                                            <connections>
                                                <action selector="tapCancel:" destination="WAf-Bi-FHO" id="fEE-uG-HmA"/>
                                            </connections>
                                        </barButtonItem>
                                        <barButtonItem key="rightBarButtonItem" title="Edit" id="a1l-fb-4C7">
                                            <connections>
                                                <segue destination="NHe-gv-fBJ" kind="showDetail" id="PFQ-lQ-0Le"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
                                </items>
...
                                    <constraint firstAttribute="height" constant="44" id="Zkm-hb-rs2"/>
                                </constraints>
                                <textAttributes key="titleTextAttributes">
                                    <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                </textAttributes>
                                <items>
                                    <navigationItem title="Edit me" id="ICD-El-Aep">
                                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="AE8-L6-gfp">
                                            <connections>
                                                <action selector="tapCancel:" destination="NHe-gv-fBJ" id="FXh-Rh-gFl"/>
                                            </connections>
                                        </barButtonItem>
                                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="9Iq-Dn-49R">
...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MAR-Su-IvY">
                                <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                                <items>
                                    <navigationItem title="Start Matching" id="lkN-tw-IO2">
                                        <barButtonItem key="backBarButtonItem" title="Back" id="VH2-4S-xQv"/>
                                        <barButtonItem key="leftBarButtonItem" title="Logout" id="QRM-fi-7L0">
                                            <connections>
                                                <action selector="tapExit:" destination="pd9-Ar-iKx" id="xjc-3o-w59"/>
                                            </connections>
                                        </barButtonItem>
                                        <barButtonItem key="rightBarButtonItem" title="Setting" id="kjb-Kp-yIW">
                                            <connections>
                                                <segue destination="WAf-Bi-FHO" kind="showDetail" id="XA5-IB-wDa"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
                                </items>
...
