...
                                    </tableViewCell>
                                </prototypes>
                            </tableView>
                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fpl-RK-z4V">
                                <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                                <items>
                                    <navigationItem title="Your matches" id="cnl-zw-tF4">
                                        <barButtonItem key="leftBarButtonItem" title="Exit" id="zWW-se-OVM">
                                            <connections>
                                                <action selector="tapExit:" destination="Wcp-k7-20p" id="byg-XS-2Zs"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
...
